Actualizacion del proyecto

--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-Hello World
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hacker knowledge</title>
+    <link rel="shortcut icon" href="portada.png" type="image/x-icon">
+    <link rel="stylesheet" href="estilos.css">
+
+</head>
+<body>
+    <header>
+        <nav>
+            <a href="#">Inicio</a>
+            <a href="#">Desarrollo_web</a>
+            <a href="#">Aprender_Linux</a>
+            <a href="#">Herramientas_de_hacking</a>
+            <a href="#">Maquinas_de_Hack_The_Box</a>
+        </nav>
+        <section class="1">
+            <h1>HACKER_KNOWLEDGE</h1>
+            <h2>Bienvenido a donde aprenderas sobre hacking y otras Habilidades</h1>
+            <h3>Podras desarrollar las habilidades que te intreresen a tu ritmo y GRATIS</h2>
+        </section>
+        <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C150.00,150.00 351.74,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #08f;"></path></svg></div>
+    </header>
+    <main>
+        <section class="2">
+            <h2 class="titulo_1">Nuestro Contenido</h2>
+            <div class="3">
+                <h3><span>1</span>Contenido Gratis</h3>
+                <p>El contenido esta en pleno desarrollo pero siempre sera gratis</p>
+                <p>este conocimiento compartido es con fines educativos y no nos hacemos responsables del mal uso de este.</p>
+                <h3><span>2</span>Contenido Amplio y Diverso</h3>
+                <p>El contenido compartido esta pensado para todos y esta presentado de forma sencilla pero eficas</p>
+            </div>              
+        </section>
+        <section class="3">
+            <div class="titulo_2">
+                <h2>Aceca de mi</h2>
+                <p>Soy un apasionado por la tecnologia y esta es mi primera pagina web</p>
+                <p>este proyecto esta pensado para compartir todo mi conocimiento aprendido</p>
+            </div>
+        </section>
+    </main>
+</body>
+</html>
